--- a/bin/data/clientConnector/index.html
+++ b/bin/data/clientConnector/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Resonate client connector</title>
+    <title>Resonate Client Connector</title>
     <script src="libraries/p5.js" type="text/javascript"></script>
 
     <!-- Uncomment the lines below to include extra p5 libraries -->
     <!--<script src="libraries/p5.dom.js" type="text/javascript"></script>-->
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
-     <script src="libraries/main.js" type="text/javascript"></script>
-       <script src="libraries/utils.js" type="text/javascript"></script>
+    <script src="libraries/reconnectingSocket.js" type="text/javascript"></script>
+
+    <script src="libraries/main.js" type="text/javascript"></script>
+    <script src="libraries/utils.js" type="text/javascript"></script>
+
     <script src="sketch.js" type="text/javascript"></script>
   </head>
   <body>
