--- a/clientConnector/sample/index.html
+++ b/clientConnector/sample/index.html
@@ -2,6 +2,14 @@
 <html>
   <head>
     <title>Resonate Client Connector</title>
+    <style>
+      html, body {
+      width:  100%;
+      height: 100%;
+      margin: 0px;
+      }
+    </style>
+
     <script src="../libraries/p5.js" type="text/javascript"></script>
 
     <!-- Uncomment the lines below to include extra p5 libraries -->
