output/input sketches split

--- a/clientConnector/outputSample/index.html
+++ b/clientConnector/outputSample/index.html
@@ -18,7 +18,7 @@
     <script src="../libraries/main.js" type="text/javascript"></script>
     <script src="../libraries/utils.js" type="text/javascript"></script>
 
-    <script src="sketch.js" type="text/javascript"></script>
+    <script src="outputSketch.js" type="text/javascript"></script>
   </head>
   <body>
   </body>
